Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107669

QtWebengine doesn't work with Vulkan

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.5.0
    • 6.4.0
    • QPA: Wayland, WebEngine
    • None
    • Linux/Wayland

    Description

      On Archlinux and Wayland, QtWebengine works only with EGL and disables Vulkan renderer, due to missing VulkanImplementation in QT Ozone code.
      With the same setup, Chromium and Brave nightly work with the Vulkan renderer enabled.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt_webengine_team Qt WebEngine Team
            testmode Test Mode
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes