Add Vulkan rendering support

Updates 3rdparty:

* 8b7ce4ef70d Make GrVkImage external

Task-number: QTBUG-107669
Change-Id: If7fbe1f20538598dd1d4f3a67be17c9f7d06a3cd
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>