src/core/render_widget_host_view_qt_delegate_item.h
@@ -101,6 +101,7 @@ protected:
 private Q_SLOTS:
     void onBeforeRendering();
     void onWindowPosChanged();
+    void releaseVulkanResources();
     void onHide();
 
 private:
